# advanced 示例目录的 CMakeLists.txt
cmake_minimum_required(VERSION 3.10)

# 这里将来可以添加更多高级示例
# 例如：
# add_executable(advanced_example advanced_example.cpp)
# target_link_libraries(advanced_example PRIVATE robotserver_sdk Threads::Threads)
#
# install(TARGETS advanced_example
#     RUNTIME DESTINATION bin/examples/advanced
# )
